adding new sqrt project

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,6 @@ project(starter_examples)
 
 # simple starter skeleton for projects that use the Universal Number System library
 add_subdirectory(apps/example)
+#the SQRT project: experimenting with different algorithms to caculate SQRT
+add_subdirectory(apps/sqrt)
 
